# exetract_linux_system_log

./: .gitignore  AGENTS.md  ANALYSIS_PROMPT.md  README.md  analysis_results.md  pyproject.toml
config/: default.yaml
src/incident_collector/: __init__.py  cli.py  config.py  os_detection.py  output.py  safety.py
src/incident_collector/collectors/: __init__.py  files.py  journal.py  prometheus.py  system.py
tests/: conftest.py  test_cli.py  test_config.py  test_files_collector.py  test_journal_collector.py  test_os_detection.py  test_packaging.py  test_prometheus.py  test_system_collector.py
