[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-collector"
version = "0.1.0"
description = "Read-only incident log collector for Ubuntu 24.04 LTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
incident-collector = "incident_collector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

